--- a/styles/main.css
+++ b/styles/main.css
@@ -51,6 +51,12 @@ li{
     padding: 1em;
 }
 
+.company-logo {
+    height: 20px;
+    vertical-align: middle;
+    margin-right: 8px;
+}
+
 .section--page{
     padding-top: 1em;
     padding-bottom: 1em;
