--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,6 @@
     --mainLinkColor-light:#0da2b8;
     --mainBorderColor-light:rgb(218, 218, 218);
     --mainBgColor-light:rgb(249, 250,251);
-    /* --font-size-base: 1rem; */
 }
 
 [data-theme="dark"]{
@@ -24,7 +23,6 @@
     line-height: 1.5em;
     box-sizing: border-box;
     color: var(--mainTextColor);
-    /* font-size: var(--font-size-base); */
     
 }
 
@@ -80,10 +78,11 @@ li{
 }
 
 #profile-pic {
-    width: 160px;
-    height: 160px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%; /* This ensures the image is circular */
+    overflow: hidden; /* This ensures that if the image is too large, it will be cropped properly */
 }
 
 #email{
@@ -147,6 +146,7 @@ li{
     font-weight: 500;
 }
 
+
 .card--project{
     padding-top: 1em;
     padding-bottom: 1em;
@@ -208,8 +208,9 @@ li{
         width: 100%; /* 1 card per row for small screens */
     }
 }
+
 @media(max-width: 900px) {
     .card--techstack {
-        width: calc(33% - 1.5em); /* 3 cards per row for medium screens */
+        width: calc(50% - 1.5em); /* 2 cards per row for medium screens */
     }
 }
