--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
     --mainLinkColor-light:#0da2b8;
     --mainBorderColor-light:rgb(218, 218, 218);
     --mainBgColor-light:rgb(249, 250,251);
+    --font-size-base: 1rem;
 }
 
 [data-theme="dark"]{
@@ -23,6 +24,7 @@
     line-height: 1.5em;
     box-sizing: border-box;
     color: var(--mainTextColor);
+    font-size: var(--font-size-base);
     
 }
 
@@ -129,7 +131,7 @@ li{
     border: 1px solid var(--mainBorderColor);
     border-radius: 5px;
     background-color: var(--mainBgColor);
-    width: calc(20% - 1.5em); /* 4 cards per row */
+    width: calc(20% - 1.5em); /* 5 cards per row */
     text-align: center;
     min-width: 120px; /* Prevents shrinking too much on small screens */
 }
